--- a/components/Font.module.css
+++ b/components/Font.module.css
@@ -7,6 +7,10 @@
     font-display: swap;
     font-style: normal;
   }
+
+  .clash{
+    font-family: 'clash', sans-serif;
+  }
   
   .clash_btn {
     font-family: 'clash', sans-serif;
